<resources>
    <string name="app_name">AntiChild</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="accelerometer_result">"x: 0.0   y: 0.0   z: 0.0"</string>
    <string name="activate_the_motion_alarm">Activate</string>
    <string name="reset">Stop</string>
    <string name="no_motion_detected">no motion detected</string>
    <string name="no_movement_detected">No movement detected</string>
    <string name="activate_sensors">Activate sensors</string>
    <string name="movement_detected">Movement detected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tools">Tools:</string>
    <string name="motion_alarm">Motion Alarm</string>
    <string name="logout">logout</string>
    <string name="access_parent_password">Access parent password</string>
    <string name="motion_alarm_status">Motion alarm status: </string>
</resources>